[package]
name = "box_any"
version = "0.1.0"
edition = "2021"
authors = ["Lorenzo Vannucci <lorenzo@vannucci.io>"]
readme = "README.md"
repository = "https://github.com/uccidibuti/box_any"
description = """
A wrap Box without generic type that allows dynamic dispatch / downcast.
"""
keywords = ["downcast", "dynamic", "dispatch", "any", "box"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
