[package]
name = "box_any"
version = "0.2.0"
edition = "2021"
authors = ["Lorenzo Vannucci <lorenzo@vannucci.io>"]
readme = "README.md"
repository = "https://github.com/uccidibuti/box_any"
license = "MIT"
documentation = "https://docs.rs/box_any/"
description = """
Provides a dynamic box type `BoxAny`, which contains a `Box<T>` value.
`BoxAny` is similar to Box<dyn Any> but it doesn't use
fat pointer to dynamic dispatch.
"""
keywords = ["downcast", "dynamic dispatch", "any", "dispatch", "box"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
